monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4004/A4004.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4003;

grammar A4004  {

  A;

}
